load("@rules_pkg//pkg:pkg.bzl", "pkg_tar")
load("@io_bazel_rules_docker//contrib:passwd.bzl", "passwd_entry", "passwd_file")
# TODO(now.youtrack.cloud/issue/TQ-36)
#load("@rules_distroless//distroless:defs.bzl", "passwd")

#passwd(
#    name = "passwd",
#    passwds = [
#        dict(
#            gecos = ["root"],
#            gid = 0,
#            home = "/root",
#            shell = "/bin/bash",
#            uid = 0,
#            username = "root",
#        ),
#        dict(
#            gecos = ["nonroot"],
#            gid = 1001,
#            home = "/home/nonroot",
#            shell = "/bin/bash",
#            uid = 1001,
#            username = "nonroot",
#        ),
#    ],
#)

# Create a passwd file with a root and nonroot user and uid.
passwd_entry(
    name = "root_user",
    gid = 0,
    tags = ["manual"],
    uid = 0,
    username = "root",
)

passwd_entry(
    name = "nonroot_user",
    info = "nonroot",
    tags = ["manual"],
    uid = 1001,
    username = "nonroot",
)

passwd_file(
    name = "passwd",
    entries = [
        ":root_user",
        ":nonroot_user",
    ],
    tags = ["manual"],
)

# Create a tar file containing the created passwd file
pkg_tar(
    name = "passwd_tar",
    srcs = [":passwd"],
    mode = "0o644",
    package_dir = "etc",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)