load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("@qrysm//tools/go:def.bzl", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle", "container_image")
load("//tools:go_image.bzl", "go_image_debug")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")
load("//tools:qrysm_image.bzl", "qrysm_image_upload")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/theQRL/qrysm/v4/cmd/qrysmctl",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/qrysmctl/checkpointsync:go_default_library",
        "//cmd/qrysmctl/db:go_default_library",
        "//cmd/qrysmctl/p2p:go_default_library",
        "//cmd/qrysmctl/testnet:go_default_library",
        "//cmd/qrysmctl/validator:go_default_library",
        "//cmd/qrysmctl/weaksubjectivity:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)

go_image(
    name = "image",
    base = select({
        "//tools:base_image_cc": "//tools:cc_image",
        "//conditions:default": "//tools:cc_image",
    }),
    binary = ":qrysmctl",
    tags = ["manual"],
    visibility = ["//cmd/qrysmctl:__pkg__"],
)

container_image(
    name = "image_with_creation_time",
    base = "image",
    tags = ["manual"],
    visibility = ["//cmd/qrysmctl:__pkg__"],
)

container_bundle(
    name = "image_bundle",
    images = {
        "gcr.io/prysmaticlabs/prysm/cmd/qrysmctl:latest": ":image_with_creation_time",
        "gcr.io/prysmaticlabs/prysm/cmd/qrysmctl:{DOCKER_TAG}": ":image_with_creation_time",
    },
    tags = ["manual"],
    visibility = ["//cmd/qrysmctl:__pkg__"],
)

go_image_debug(
    name = "image_debug",
    image = ":image",
    tags = ["manual"],
    visibility = ["//cmd/qrysmctl:__pkg__"],
)

container_bundle(
    name = "image_bundle_debug",
    images = {
        "gcr.io/prysmaticlabs/prysm/cmd/qrysmctl:latest-debug": ":image_debug",
        "gcr.io/prysmaticlabs/prysm/cmd/qrysmctl:{DOCKER_TAG}-debug": ":image_debug",
    },
    tags = ["manual"],
    visibility = ["//cmd/qrysmctl:__pkg__"],
)

docker_push(
    name = "push_images",
    bundle = ":image_bundle",
    tags = ["manual"],
    visibility = ["//cmd/qrysmctl:__pkg__"],
)

docker_push(
    name = "push_images_debug",
    bundle = ":image_bundle_debug",
    tags = ["manual"],
    visibility = ["//cmd/qrysmctl:__pkg__"],
)

go_binary(
    name = "qrysmctl",
    embed = [":go_default_library"],
    gotags = ["noMainnetGenesis"],
    visibility = ["//visibility:public"],
)

qrysm_image_upload(
    name = "push_oci_image",
    binary = ":qrysmctl",
    entrypoint = ["/qrysmctl"],
    repository = "gcr.io/prylabs-dev/prysm/prysmctl",
    symlinks = {
        # Backwards compatiability for images that depended on the old filepath.
        "/app/cmd/qrysmctl/qrysmctl": "/qrysmctl",
    },
    tags = ["manual"],
)
