load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("@qrysm//tools/go:def.bzl", "go_library")
load("//tools:qrysm_image.bzl", "qrysm_image_upload")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/theQRL/qrysm/cmd/qrysmctl",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/qrysmctl/checkpointsync:go_default_library",
        "//cmd/qrysmctl/db:go_default_library",
        "//cmd/qrysmctl/p2p:go_default_library",
        "//cmd/qrysmctl/testnet:go_default_library",
        "//cmd/qrysmctl/validator:go_default_library",
        "//cmd/qrysmctl/weaksubjectivity:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)

go_binary(
    name = "qrysmctl",
    embed = [":go_default_library"],
    gotags = ["noMainnetGenesis"],
    visibility = ["//visibility:public"],
)

qrysm_image_upload(
    name = "push_oci_image",
    binary = ":qrysmctl",
    entrypoint = ["/qrysmctl"],
    repository = "index.docker.io/theqrl-dev/qrysm-qrysmctl",
    symlinks = {
        # Backwards compatiability for images that depended on the old filepath.
        "/app/cmd/qrysmctl/qrysmctl": "/qrysmctl",
    },
    tags = ["manual"],
)
