load("@qrysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "dilithium.go",
        "interface.go",
        "signature_batch.go",
    ],
    importpath = "github.com/cyyber/qrysm/v4/crypto/dilithium",
    visibility = ["//visibility:public"],
    deps = [
        "//crypto/bls/common:go_default_library",
        "//crypto/dilithium/dilithiumt:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_theqrl_go_qrllib//dilithium:go_default_library",
    ],
)
