load("@qrysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["maxprocs.go"],
    importpath = "github.com/theQRL/qrysm/runtime/maxprocs",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_uber_go_automaxprocs//maxprocs:go_default_library",
    ],
)
