load("@qrysm//tools/go:def.bzl", "go_library")
load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("//tools:qrysm_image.bzl", "qrysm_image_upload")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/theQRL/qrysm/tools/enr-calculator",
    visibility = ["//visibility:private"],
    deps = [
        "//crypto/ecdsa:go_default_library",
        "//io/file:go_default_library",
        "//runtime/maxprocs:go_default_library",
        "@com_github_libp2p_go_libp2p//core/crypto:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_theqrl_go_zond//p2p/enode:go_default_library",
        "@com_github_theqrl_go_zond//p2p/enr:go_default_library",
    ],
)

go_binary(
    name = "enr-calculator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

qrysm_image_upload(
    name = "push_images",
    binary = ":enr-calculator",
    entrypoint = ["/enr-calculator"],
    repository = "index.docker.io/theqrl/qrysm-enr-calculator",
    symlinks = {
        # Backwards compatibility for images that depended on the old filepath.
        "/app/tools/enr-calculator/enr-calculator": "/enr-calculator",
    },
    tags = ["manual"],
)