load("@qrysm//tools/go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("//tools:qrysm_image.bzl", "qrysm_image_upload")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/theQRL/qrysm/tools/http-request-sink",
    visibility = ["//visibility:private"],
    deps = ["//config/params:go_default_library"],
)

go_binary(
    name = "http-request-sink",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//config/params:go_default_library",
        "//testing/require:go_default_library",
    ],
)

qrysm_image_upload(
    name = "push_images",
    binary = ":http-request-sink",
    entrypoint = ["/http-request-sink"],
    repository = "index.docker.io/theqrl/qrysm-http-request-sink",
    symlinks = {
        # Backwards compatibility for images that depended on the old filepath.
        "/app/tools/http-request-sink/http-request-sink": "/http-request-sink",
    },
    tags = ["manual"],
)