load("@qrysm//tools/go:def.bzl", "go_library")
load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("//tools:qrysm_image.bzl", "qrysm_image_upload")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/theQRL/qrysm/tools/qcli",
    visibility = ["//visibility:private"],
    deps = [
        "//beacon-chain/core/transition:go_default_library",
        "//beacon-chain/state/state-native:go_default_library",
        "//consensus-types/blocks:go_default_library",
        "//encoding/ssz/equality:go_default_library",
        "//proto/qrysm/v1alpha1:go_default_library",
        "//runtime/logging/logrus-prefixed-formatter:go_default_library",
        "//runtime/version:go_default_library",
        "@com_github_kr_pretty//:go_default_library",
        "@com_github_prysmaticlabs_fastssz//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
        "@in_gopkg_d4l3k_messagediff_v1//:go_default_library",
    ],
)

go_binary(
    name = "qcli",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

qrysm_image_upload(
    name = "push_images",
    binary = ":qcli",
    entrypoint = ["/qcli"],
    repository = "index.docker.io/theqrl/qrysm-qcli",
    symlinks = {
        # Backwards compatibility for images that depended on the old filepath.
        "/app/tools/qcli/qcli": "/qcli",
    },
    tags = ["manual"],
)