load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "constants.go",
        "types.go",
    ],
    importpath = "github.com/theQRL/qrysm/validator/keymanager",
    visibility = [
        "//cmd:__subpackages__",
        "//testing/endtoend/components:__subpackages__",
        "//tools:__subpackages__",
        "//validator:__pkg__",
        "//validator:__subpackages__",
    ],
    deps = [
        "//async/event:go_default_library",
        "//config/fieldparams:go_default_library",
        "//crypto/dilithium:go_default_library",
        "//proto/qrysm/v1alpha1/validator-client:go_default_library",
        "//proto/zond/service:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["types_test.go"],
    deps = [
        ":go_default_library",
        "//testing/assert:go_default_library",
        "//testing/require:go_default_library",
        "//validator/keymanager/derived:go_default_library",
        "//validator/keymanager/local:go_default_library",
        "//validator/keymanager/remote-web3signer:go_default_library",
    ],
)
