load("@qrysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = [
        "mock_engine_client.go",
        "mock_execution_chain.go",
        "mock_faulty_powchain.go",
    ],
    importpath = "github.com/theQRL/qrysm/v4/beacon-chain/execution/testing",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//async/event:go_default_library",
        "//beacon-chain/execution/types:go_default_library",
        "//beacon-chain/state:go_default_library",
        "//beacon-chain/state/state-native:go_default_library",
        "//config/params:go_default_library",
        "//consensus-types/blocks:go_default_library",
        "//consensus-types/interfaces:go_default_library",
        "//consensus-types/payload-attribute:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//math:go_default_library",
        "//proto/engine/v1:go_default_library",
        "//proto/qrysm/v1alpha1:go_default_library",
        "//time/slots:go_default_library",
        "@com_github_holiman_uint256//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_theqrl_go_zond//accounts/abi/bind/backends:go_default_library",
        "@com_github_theqrl_go_zond//common:go_default_library",
        "@com_github_theqrl_go_zond//common/hexutil:go_default_library",
        "@com_github_theqrl_go_zond//core/types:go_default_library",
        "@com_github_theqrl_go_zond//rpc:go_default_library",
    ],
)
