load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["eth1_types.go"],
    importpath = "github.com/cyyber/qrysm/v4/beacon-chain/execution/types",
    visibility = ["//beacon-chain:__subpackages__"],
    deps = [
        "//encoding/bytesutil:go_default_library",
        "@com_github_theqrl_go_zond//common:go_default_library",
        "@com_github_theqrl_go_zond//common/hexutil:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["eth1_types_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//testing/assert:go_default_library",
        "@com_github_theqrl_go_zond//common:go_default_library",
    ],
)
