load("@qrysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["types.go"],
    importpath = "github.com/theQRL/qrysm/beacon-chain/slasher/types",
    visibility = ["//beacon-chain:__subpackages__"],
    deps = [
        "//consensus-types/primitives:go_default_library",
        "//proto/qrysm/v1alpha1:go_default_library",
    ],
)
