load("@qrysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = [
        "getters.go",
        "getters_block.go",
        "getters_checkpoint.go",
        "getters_validator.go",
    ],
    importpath = "github.com/theQRL/qrysm/beacon-chain/state/testing",
    visibility = ["//beacon-chain/state:__subpackages__"],
    deps = [
        "//beacon-chain/state:go_default_library",
        "//config/fieldparams:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//proto/qrysm/v1alpha1:go_default_library",
        "//testing/assert:go_default_library",
        "//testing/require:go_default_library",
        "@com_github_theqrl_go_bitfield//:go_default_library",
        "@com_github_theqrl_go_qrllib//dilithium:go_default_library",
    ],
)
