load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "generate_genesis.go",
        "testnet.go",
    ],
    importpath = "github.com/theQRL/qrysm/v4/cmd/prysmctl/testnet",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/state:go_default_library",
        "//cmd/flags:go_default_library",
        "//config/params:go_default_library",
        "//container/trie:go_default_library",
        "//io/file:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "//runtime/interop:go_default_library",
        "//runtime/version:go_default_library",
        "@com_github_ghodss_yaml//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_theqrl_go_zond//core:go_default_library",
        "@com_github_theqrl_go_zond//rpc:go_default_library",
        "@com_github_theqrl_go_zond//zondclient:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["generate_genesis_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//crypto/bls:go_default_library",
        "//runtime/interop:go_default_library",
        "//testing/assert:go_default_library",
        "//testing/require:go_default_library",
    ],
)
