load("@qrysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "buckets.go",
        "cmd.go",
        "query.go",
    ],
    importpath = "github.com/theQRL/qrysm/v4/cmd/qrysmctl/db",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/db/kv:go_default_library",
        "//config/params:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_theqrl_go_zond//common/hexutil:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
        "@io_etcd_go_bbolt//:go_default_library",
    ],
)
