load("@qrysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["cmd.go"],
    importpath = "github.com/theQRL/qrysm/v4/cmd/qrysmctl/deprecated",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/qrysmctl/deprecated/checkpoint:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)
