load("@qrysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "github.com/theQRL/qrysm/v4/cmd/staking-deposit-cli/config",
    visibility = ["//visibility:public"],
    deps = ["//cmd/staking-deposit-cli/misc:go_default_library"],
)
