load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("@qrysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/theQRL/qrysm/v4/cmd/staking-deposit-cli/deposit",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/staking-deposit-cli/deposit/existingseed:go_default_library",
        "//cmd/staking-deposit-cli/deposit/generatedilithiumtoexecutionchange:go_default_library",
        "//cmd/staking-deposit-cli/deposit/newseed:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)

go_binary(
    name = "deposit",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
