load("@qrysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["helper.go"],
    importpath = "github.com/theQRL/qrysm/cmd/staking-deposit-cli/misc",
    visibility = ["//visibility:public"],
    deps = [
        "//config/fieldparams:go_default_library",
    ],
)
