load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["proposer-settings.go"],
    importpath = "github.com/prysmaticlabs/prysm/v4/config/validator/service",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ethereum_go_ethereum//common:go_default_library",
        "@com_github_theqrl_go_qrllib//dilithium:go_default_library",
    ],
)
