load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["proposer_settings.go"],
    importpath = "github.com/cyyber/qrysm/v4/config/validator/service",
    visibility = ["//visibility:public"],
    deps = [
        "//consensus-types/validator:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//proto/prysm/v1alpha1/validator-client:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_theqrl_go_qrllib//dilithium:go_default_library",
        "@com_github_theqrl_go_zond//common:go_default_library",
        "@com_github_theqrl_go_zond//common/hexutil:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["proposer_settings_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//config/params:go_default_library",
        "//consensus-types/validator:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//testing/require:go_default_library",
        "@com_github_theqrl_go_qrllib//dilithium:go_default_library",
        "@com_github_theqrl_go_zond//common:go_default_library",
        "@com_github_theqrl_go_zond//common/hexutil:go_default_library",
    ],
)
